# rsrs

./: Cargo.toml
namegen/: Cargo.toml  build.rs
namegen/data/: adjectives.txt  animals.txt
namegen/src/: lib.rs
src/: common.rs  ioctl.rs  lib.rs  local.rs  main.rs  prelude.rs  protocol.rs  remote.rs  router.rs  terminal.rs
src/command/: daemon.rs  login.rs  mod.rs  open.rs  remote.rs
src/common/: fd.rs  fd_reader.rs  fd_writer.rs  mod.rs
src/daemon/: command.rs  mod.rs  network.rs
src/endpoint/: mod.rs  process.rs  sink.rs  source.rs  spawn.rs
src/protocol/: cli.rs  mod.rs  network.rs
tokio-pty-command/: Cargo.toml
tokio-pty-command/src/: command.rs  ioctl.rs  lib.rs  pty_master.rs  raw.rs
