[package]
name = "rsrs"
version = "0.1.0"
authors = ["NAKASHIMA, Makoto <makoto.nksm+github@gmail.com>"]
edition = "2018"
publish = false
description = "Remote shell written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["tokio-pty-command"]

[dependencies]
clap = "3.0.0-beta.1"
custom_debug = "0.5.0"
etc-passwd = "0.1.1"
futures-core = "0.3.5"
futures-util = "0.3.5"
generational-arena = "0.2.8"
nix = "0.18.0"
once_cell = "1.4.0"
parking_lot = "0.11.0"
serde = { version = "1.0.115", features = ["derive"] }
tokio = { version = "0.2.22", features = [
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt-threaded",
    "sync",
    "uds",
] }
tokio-pty-command = { path = "tokio-pty-command" }
tokio-serde = { version = "0.6.1", features = ["bincode"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
tracing = "0.1.19"
tracing-subscriber = "0.2.11"
tracing-futures = "0.2.4"
passfd = { version = "0.1.4", features = ["tokio_02"] }
