[package]
name = "rsrs"
version = "0.1.0"
authors = [ "NAKASHIMA, Makoto <makoto.nksm+github@gmail.com>" ]
edition = "2018"
publish = false
description = "Remote shell written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "namegen", "tokio-pty-command" ]

[dependencies]
clap = "3.0.0-beta.1"
color-eyre = "0.5.2"
custom_debug = "0.5.0"
etc-passwd = "0.1.1"
futures-core = "0.3.5"
futures-util = "0.3.5"
generational-arena = "0.2.8"
mio = "0.6.22"
namegen = { path = "namegen" }
nix = "0.18.0"
once_cell = "1.4.1"
parking_lot = "0.11.0"
passfd = { version = "0.1.4", features = [ "tokio_02" ] }
rand = "0.7.3"
serde = { version = "1.0.115", features = [ "derive" ] }
tokio = { version = "0.2.22", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt-threaded",
    "sync",
    "uds",
] }
tokio-pty-command = { path = "tokio-pty-command" }
tokio-serde = { version = "0.6.1", features = [ "bincode" ] }
tokio-util = { version = "0.3.1", features = [ "codec" ] }
tracing = "0.1.19"
tracing-error = "0.1.2"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.11"
