[package]
name = "namegen"
version = "0.1.0"
authors = [ "NAKASHIMA, Makoto <makoto.nksm+github@gmail.com>" ]
edition = "2018"
publish = false
description = "Generate adjective-animal names"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dev-dependencies]
once_cell = "1.4.1"
